# PGK

./: .gitignore  CMakeLists.txt  README.md
zadanie2/: Map.fragmentshader  Map.vertexshader  controls.cpp  controls.hpp  main.cpp  map.cpp  map.hpp  render.cpp  render.hpp  track.cpp  track.hpp  zadanie2
zadanie2/tracks/: 19062014-BieganieTychy.gpx  Bieg2016.gpx  BikeAtelierMtbMaratonTychyHobby.gpx  Henryków-henrykówPrzezRezBukowy.gpx  Kolejna.gpx  Kolejna2.gpx  Konstanz-lagoMagiorreDisentisKonstanz.gpx  Krempna+ozenna.gpx  Od ród aCyrylaDoStrzelinaIPowrót.gpx  Pap-gil-pap.gpx  Pszczyna.gpx  RoundAboutPaprocany.gpx  SpacerkiemPrzedObiadem.gpx  Trening.gpx  Troch LasuTrochePola.gpx  Tychy-P tla.gpx  track1.gpx  track2.gpx
